@@ -32,6 +32,13 @@ Known main issues:
     editor_default = 'text'  # internal default, just for completeness
 
 
+Current:
+  Bug Fixes:
+    * Jabber bot can now be configured to use an authentication realm which
+      is different from the server's hostname; the xmpp_node configuration
+      parameter can now contain a full JID and the xmpp_resource parameter
+      is no longer supported
+
 Version 1.8.0beta2:
   Bug Fixes:
     * GUI Editor - fixed bugs:
